--- a/app/templates/candidate.html
+++ b/app/templates/candidate.html
@@ -5,28 +5,62 @@
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
  <title>Candidate</title>
+ <style>
+  /* Add your custom styles here */
+  .candidate-details {
+    padding: 20px;
+    margin-top: 30px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  .candidate-img {
+    float: left;
+    margin-top: 20px;
+    margin-right: 20px; /* Adjust the margin to move the image slightly left */
+    border: 1px solid #ddd;
+    border-radius: 50%;
+  }
+  .btn-back-home {
+    margin-top: 20px;
+  }
+  .resume-info {
+    margin-bottom: 10px;
+    font-size: 18px;
+    color: #333;
+    padding-top: 5px; /* Add padding to the top of resume info */
+  }
+  .application-no {
+    margin-top: 20px; /* Add margin-top to application number */
+  }
+ </style>
 </head>
 <body>
-  <div class="container">
-   <h1 class="alert-danger text-center p-3">Candidate Detail</h1>
+  <div class="container ">
+   <h1 class="alert-danger text-center p-3 m-2">Candidate Detail</h1>
    <div class="row">
-    <div class="col-sm-10 shadow p-5 offset-sm-1">
-     <h3 class="text-center"><u>Resume</u></h3>
-     <p class="float-end">Applicantion No: {{candidate.id}}</p>
-     <img src="{{candidate.profile_image.url}}" alt="" class="img-fluid img-thumbnail float-end mt-4" width="150" height="150">
-     <p>Name: {{candidate.name}}</p>
-     <p>Date of Birth: {{candidate.dob}}</p>
-     <p>Gender: {{candidate.gender}}</p>
-     <p>Address: {{candidate.locality}}, {{candidate.city}}, {{candidate.state}} - {{candidate.pin}}</p>
-     <p>Mobile No: {{candidate.mobile}}</p>
-     <p>Email ID: {{candidate.email}}</p>
-     <p>Preferred Job Cities: {{candidate.job_city|remove_special:"[]'"}}</p>
-     <p>Attachment: <a href="{{candidate.file.url}}">Download File</a></p>
-    <div class="text-center">
-     <a href="/" class="btn btn-danger">Back to Home</a>
-    </div>
+    <div class="col-sm-10 shadow p-5 offset-sm-1 candidate-details">
+     <h3 class="alert alert-dark text-center"><u>Resume</u></h3>
+     <div class="row">
+       <div class="col-md-4">
+         <p class="application-no">Application No: {{ candidate.id }}</p>
+         <img src="{{candidate.profile_image.url}}" alt="" class="img-fluid img-thumbnail candidate-img" width="150" height="150">
+       </div>
+       <div class="col-md-8">
+         <p class="resume-info">Name: {{candidate.name}}</p>
+         <p class="resume-info">Date of Birth: {{candidate.dob}}</p>
+         <p class="resume-info">Gender: {{candidate.gender}}</p>
+         <p class="resume-info">Address: {{candidate.locality}}, {{candidate.city}}, {{candidate.state}} - {{candidate.pin}}</p>
+         <p class="resume-info">Mobile No: {{candidate.mobile}}</p>
+         <p class="resume-info">Email ID: {{candidate.email}}</p>
+         <p class="resume-info">Preferred Job Cities: {{candidate.job_city|remove_special:"[]'"}}</p>
+         <p class="resume-info">Attachment: <a href="{{candidate.file.url}}">Download File</a></p>
+       </div>
+     </div>
+     <div class="text-center btn-back-home">
+       <a href="/" class="btn btn-danger">Back to Home</a>
+     </div>
     </div>
    </div>
   </div>
