--- a/app/templates/candidate.html
+++ b/app/templates/candidate.html
@@ -59,7 +59,7 @@
        </div>
      </div>
      <div class="text-center btn-back-home">
-       <a href="/" class="btn btn-danger">Back to Home</a>
+       <a href="/" class="btn btn-info">Back to Home</a>
      </div>
     </div>
    </div>
